In DefaultProjectManager, saveProject: URL replaced by URI.